5374for白山市完成版 能美市の5374をforkして制作しました。

--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,8 @@ a:hover {
 	vertical-align: middle;
 	text-align: center;
 	width: 80%;
-	font-size: 22px;
+	font-size: 20px;
+	line-height: 1.2em;
 }
 #accordion .accordion-heading .accordion-toggle {
 	position: relative;
